Complete garden simulator implementation with all API requirements
- Implemented all Gardening System API methods (initializeGarden, getPlants, rain, temperature, parasite, getState)
- Added config plant tracking to filter UI logs
- Enhanced getState() to log detailed garden state with alive/dead plants
- Fixed parasite() to only infect vulnerable plants per API spec
- Improved sprinkler system with proper timing and logging
- Added plant health recovery mechanism
- Fixed moisture decay (2% per day) and sprinkler water amount (10 units)
- Enhanced plant death logging with cause of death
- Updated UI layout to 3x9 grid (27 plots) for horizontal scaling
- Made application launch in maximized window
- Fixed plant selection dialog sizing
- Code cleanup and improvements